--- a/advancedCSS/main.css
+++ b/advancedCSS/main.css
@@ -10,6 +10,11 @@ body {
     margin: 0;
 }
 
+.container {
+    width: 100%;
+    margin: auto;
+}
+
 /*######## Nav Bar ########*/
 nav {
     width: 100%;
@@ -50,6 +55,8 @@ ul.topnav li a:hover {
 ul.topnav li.dropdown-icon {
     display: none;
 }
+
+
 
 /*######## Mobile ########*/
 @media screen and (max-width: 680px)
