--- a/advancedCSS/main.css
+++ b/advancedCSS/main.css
@@ -15,6 +15,16 @@ body {
     font-family: Quicksand;
 }
 
+label {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.2;
+}
+
 .container {
     width: 100%;
     margin: auto;
@@ -47,6 +57,10 @@ body {
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+
+* {
+    box-sizing: border-box;
+}
 
 /*######## Nav Bar ########*/
 nav {
@@ -100,9 +114,17 @@ ul.topnav li.dropdown-icon {
 }
 
 div.box {
-    
+    text-align: center;
+    padding: 36px 24px 40px 24px;
+    margin: 24px;
     background: white;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, .15);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .15), 
+                0 2px 3px 0 rgba(0, 0, 0, .1);
+    
+}
+
+div.icon {
+    width: 100%;
 }
 
 .leftside-col {
