--- a/advancedCSS/main.css
+++ b/advancedCSS/main.css
@@ -73,6 +73,8 @@ nav ul {
     overflow: hidden;
     margin: 0;
     padding: 0;
+    animation-timing-function: ease-in-out;
+    animation-duration: 1s;
 }
 
 ul.topnav li {
