--- a/advancedCSS/main.css
+++ b/advancedCSS/main.css
@@ -206,6 +206,28 @@ form h2 {
     color: #fff;
 }
 
+footer.footsy {
+    background-color: #666;
+    padding-left: 10%;
+}
+
+footer.footsy h1 {
+    color: #fff;
+    font-size: 30px;
+}
+
+footer.footsy ul {
+    list-style: none;
+    text-align: left;
+    padding: 0;
+}
+
+footer.footsy ul li {
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.5;
+}
+
 /*######## Mobile ########*/
 @media screen and (max-width: 680px)
 {
@@ -249,9 +271,14 @@ form h2 {
         font-size: 18px;
     }
 
-    .col-6, .col-4, .col-5, .col-7 {
+    .col-6, .col-4, .col-5, .col-7, .col-3 {
         width: 100%;
         margin: 0;
+    }
+
+    div.mobile-stack {
+        width: 50%;
+        display: block;
     }
 
     div.box {
