now the exercise it is working. I'm still having some dificulty to understand all the questions that has been made, but all the calculation is working.!

--- a/helloJavascript/index.css
+++ b/helloJavascript/index.css
@@ -51,7 +51,7 @@ body {
     font-size: 32px;
     font-weight: 700;
     color: #fff;
-    background-color: #0069ff;
+    background-color: #00ad0e;
     border-radius: 7px;
     padding: 15px 60px;
     display: block;
