--- a/skateOrDieProject/main.css
+++ b/skateOrDieProject/main.css
@@ -18,10 +18,6 @@
     font-size: 14px;
 }
 
-.section-two-img {
-
-}
-
 .cool-stuff-wrapper {
     margin-top: 12px;
 }
@@ -52,4 +48,8 @@ button.btn-center {
     margin-top: 15px;
     margin-bottom: 20px;
     width: 82%;
+}
+
+img.img-footer {
+    padding: 20px;
 }
