Cleaning up the Project to Start fresh.

--- a/introSASS/_styles/styles.css
+++ b/introSASS/_styles/styles.css
@@ -1,35 +1,2 @@
-body {
-  background-color: cadetblue; }
 
-h1 {
-  color: white; }
-
-span {
-  color: blue; }
-
-.circle {
-  background-color: darkred;
-  margin-top: 150px;
-  margin-left: 150px;
-  height: 250px;
-  width: 250px;
-  border-radius: 50%;
-  box-shadow: 0 0 9px #333333; }
-
-.square {
-  background-color: darkgreen;
-  margin: auto;
-  height: 150px;
-  width: 150px;
-  border: 1px solid #000000;
-  box-shadow: 0 0 15px #FFFFFF; }
-
-.jumbotron {
-  text-align: center;
-  background: none; }
-
-.section-ligth {
-  background-color: #ECEEEF;
-  padding: 2rem; }
-
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=../_styles/styles.map */
