--- a/introSASS/_styles/styles.css
+++ b/introSASS/_styles/styles.css
@@ -1,2 +1,91 @@
+/* line 32, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+body {
+  background-color: #E6F2FF;
+}
+
+/* line 35, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+h1 {
+  text-align: center;
+  padding-top: 20px;
+}
+
+/* line 39, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+section {
+  background-color: #CC66FF;
+  color: #333333;
+  width: 780px;
+  margin: auto;
+  padding: 20px;
+  position: relative;
+  z-index: -2;
+}
+
+/* line 48, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+.thumb1 {
+  height: 120px;
+  width: 120px;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  border-radius: 10%;
+  background-color: #333333;
+  color: #E6F2FF;
+  margin: 0 270px -90px;
+}
+
+/* line 52, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+.thumb2 {
+  height: 100px;
+  width: 100px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  background-color: #CC66FF;
+  color: #CC66FF;
+  margin: -50px 1150px;
+}
+
+/* line 56, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+.btn-1 {
+  padding: 15px 20px;
+  border-radius: 7px;
+  background-color: #6600CC;
+  color: #E6F2FF;
+  border-width: 0;
+  border-style: none;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+}
+
+/* line 28, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+.btn-1:hover {
+  background-color: #9933ff;
+}
+
+/* line 59, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+.btn-2 {
+  padding: 30px;
+  border-radius: 50%;
+  background-color: #333333;
+  color: #E6F2FF;
+  border-width: 0;
+  border-style: none;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  font-size: 2rem;
+}
+
+/* line 28, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+.btn-2:hover {
+  background-color: #666666;
+}
+
+/* line 62, C:/xampp/htdocs/Udemy/udemy-training/introSASS/_sass/styles.sass */
+.btn-2:hover {
+  background-color: #4d0099;
+}
 
 /*# sourceMappingURL=../_styles/styles.map */
