--- a/10-structure-project-sass/10-2-SASS_Skillz/CSS/app.css
+++ b/10-structure-project-sass/10-2-SASS_Skillz/CSS/app.css
@@ -1,21 +1,112 @@
-/* line 4, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/base/_base.sass */
+/* line 1, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/base/_base.sass */
 body {
   margin: 0;
   padding: 0;
 }
 
-/* line 8, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/base/_base.sass */
+/* line 5, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/base/_base.sass */
 h1 {
   color: #EEEEEE;
   font-family: Georgia, Times, serif;
 }
 
-/* line 3, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/layouts/_header.sass */
+/* line 1, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/layouts/_header.sass */
 #header {
   text-align: center;
   display: block;
   width: 100%;
   background-color: #008975;
+}
+
+/* line 6, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/layouts/_header.sass */
+#header h1 {
+  margin: 0;
+  padding: 10px 0;
+}
+
+/* line 1, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/layouts/_sections.sass */
+#main-content {
+  width: 100%;
+  padding: 20px 30px;
+  box-sizing: border-box;
+  display: inline-block;
+  background-color: #EEEEEE;
+}
+
+/* line 1, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_navbar.sass */
+#main-nav {
+  display: block;
+  width: 100%;
+  background-color: #00AA8D;
+  padding: 10px 0 40px;
+}
+
+/* line 6, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_navbar.sass */
+#main-nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+/* line 10, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_navbar.sass */
+#main-nav ul li {
+  float: left;
+  margin-left: 30px;
+}
+
+/* line 13, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_navbar.sass */
+#main-nav ul li a {
+  text-decoration: none;
+  font-size: 22px;
+  color: #EEEEEE;
+}
+
+/* line 17, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_navbar.sass */
+#main-nav ul li a:hover {
+  color: red;
+}
+
+/* line 1, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_pro-img.sass */
+.pro-img {
+  -webkit-box-shadow: 0 0 15px #555555;
+  -moz-box-shadow: 0 0 15px #555555;
+  box-shadow: 0 0 15px #555555;
+  border: 1px solid #00AA8D;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #00AA8D;
+  width: 22%;
+  height: 120px;
+  display: inline-block;
+  float: left;
+  margin: 15px;
+}
+
+/* line 1, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_alerts.sass */
+.alert, .success, .warning, .oh-dang {
+  border: 1px solid #333333;
+  margin: 10px 0;
+  padding: 15px;
+  text-transform: uppercase;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
+
+/* line 8, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_alerts.sass */
+.success {
+  background-color: #4CAF50;
+}
+
+/* line 12, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_alerts.sass */
+.warning {
+  background-color: #FFCC33;
+}
+
+/* line 16, C:/xampp/htdocs/Udemy/udemy-training/10-structure-project-sass/10-2-SASS_Skillz/SASS/modules/_alerts.sass */
+.oh-dang {
+  background-color: red;
 }
 
 /*# sourceMappingURL=../CSS/app.map */
