--- a/10-structure-project-sass/10-3-landingPage/sass/_variables.sass
+++ b/10-structure-project-sass/10-3-landingPage/sass/_variables.sass
@@ -1,38 +1,42 @@
 //GLOBAL VARIABELS
 
 //COLORS
+// darker red  
 $brand-primary:             #cd4b3d
+// dark red     
 $brand-secondary:           #cd493b
+// ligther red  
 $brand-third:               #cd4b3c
+// almost black 
 $base-dark:                 #212630
+// light grey   
 $base-ligth:                #fffcfc
+// lighter grey 
 $base-ligther:              #f6f5f5
 
-// darker red  
-// dark red     
-// ligther red  
-// almost black 
-// light grey   
-// lighter grey 
 
 $black:                     #000
 $white:                     #fff
+$red:                       #f00
 
 //FONTS
 $font-family-apple:     -apple-system, system-ui, BlinkMacSsystemFont, 'Segou UI'
 $font-family-roboto:    'Roboto Slab', serif
-$font-base:             $font-family-apple
+$font-family-courgette: 'Courgette', sans-serif
+$font-family-base:      $font-family-apple
 
 $font-base:             1rem
 $font-large:            1.25rem
 $font-xlg:              2rem
 
-$font-weigth-normal:    normal
-$base-line-height:      1.25rem
+$font-weight-normal:    normal
+$base-line-height:      1.25
 
+//BORDERS
 $border-width:          1px
 $border-radius:         10px
 
+//BUTTONS
 $btn-main-color:        $base-ligther
 $btn-primary-bg:        $brand-primary
 $btn-dark-bg:           $base-dark
