--- a/10-structure-project-sass/10-3-landingPage/sass/app.sass
+++ b/10-structure-project-sass/10-3-landingPage/sass/app.sass
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+@import url('https://fonts.googleapis.com/css?family=Courgette');
 @import 'variables'
+@import 'extend'
 @import 'mixins'
 @import 'base/base-dir'
 @import 'layouts/layouts-dir'
